# HotdogsRun

./: .gitignore  BotMovement.cpp  CMakeLists.txt  HotdogsRun.sln  HotdogsRun.vcxproj  HotdogsRun.vcxproj.filters  README.md  settings.json  vcpkg.json
The Real Engine/: The Real Engine.sln
fonts/: HackBold.font  SansSerif.font  SansSerif_.font
models/: 3x3_tire_1.vox  3x3_tire_2.vox  3x3_tire_3.vox  3x3x3.vox  arrow.vox  banan.mtl  banan.vox  banan2.mtl  banan2.vox  banana.vox  barier.vox  barierka.mtl  barierka.vox  barierkaWyscigowa.mtl  barierkaWyscigowa.vox  bilboardHodDog.mtl  bilboardHodDog.vox  bomba.mtl  brama.mtl  bramaSlupek.mtl  building.vox  building_1.vox  building_10.vox  building_11.vox  building_12.vox  building_13.vox  building_2.vox  building_3.vox  building_4.vox  building_5.vox  building_6.vox  building_7.vox  building_8.vox  building_9.vox  building_test.vox  bus.vox  car.blend  car.blend1  crate.vox  debug_star.vox  (+101 more)
models obj test/: przejscieDlaPieszychAsfalt.mtl
models_centered/: Untitled.002.mtl  Untitled.009.mtl  Untitled.012.mtl  Untitled.015.mtl  Untitled.017.mtl  Untitled.018.mtl  Untitled.019.mtl  Untitled.021.mtl  Untitled.023.mtl  Untitled.024.mtl  Untitled.025.mtl  Untitled.026.mtl  Untitled.028.mtl  Untitled.029.mtl  Untitled.031.mtl  Untitled.032.mtl  Untitled.033.mtl  Untitled.034.mtl  Untitled.035.mtl  Untitled.037.mtl  Untitled.038.mtl  Untitled.039.mtl  Untitled.040.mtl  Untitled.041.mtl  Untitled.042.mtl  Untitled.043.mtl  Untitled.044.mtl  Untitled.045.mtl  Untitled.046.mtl  Untitled.047.mtl  Untitled.048.mtl  (+57 more)
(+325 files in other folders)
